FIX - shifted some margins added header

--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,15 @@ body {
   align-items: center;
 }
 
-.quiz-title {
-  margin: 0;
-  font-size: 4rem;
+.stylish-heading {
   background: -webkit-linear-gradient(#f69292, #333);
   background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+.quiz-title {
+  margin: 0;
+  font-size: 4rem;
 }
 
 .quiz-description {
@@ -60,9 +63,12 @@ body {
   animation: spin 2s linear infinite;
 }
 
+nav {
+  text-align: center;
+}
+
 .question-container {
-  margin-top: 20px;
-  margin-left: 10vw;
+  margin: 1.5rem 2em;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -71,7 +77,7 @@ body {
 }
 
 .question {
-  margin: 10px;
+  margin-right: 2rem;
 }
 
 .option {
@@ -87,15 +93,17 @@ body {
   min-width: 50px;
 }
 
-.score-text  {
+.score-text {
   margin: 10px;
   text-align: center;
   font-size: large;
   font-weight: 600;
 }
+
 .advise {
   margin: auto;
 }
+Z
 .play-again {
   margin: 10px;
 }
@@ -114,7 +122,7 @@ input[type='radio'] {
 
 
 hr {
-  width: 70vw;
+  width: 100vw;
   min-width: 100%;
 }
 
@@ -124,10 +132,11 @@ hr {
 
 
 @keyframes spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
+  from {
+    transform: rotate(0deg);
+  }
 
-@media (min-size: 700px) {
-  
+  to {
+    transform: rotate(360deg);
+  }
 }
